# Optimiseur-d-Imbrication-Textile

./: .gitignore  CMakeLists.txt  README.md
docs/: algorithm.md
examples/: input_complex.txt  input_simple.txt
src/: NestingOptimizer.cpp  NestingOptimizer.h  Rectangle.cpp  Rectangle.h  main.cpp
